--- a/About.html
+++ b/About.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Suthaharan Vishnugopy</title>
+        <title>About</title>
         <link href="style.css" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="icon" href="img\logopng2.png">
@@ -18,22 +18,21 @@
 
 
 
-        <section class="first">
-            <h2 class="subheading">You Can Find Me On</h2>
-            <div class="flero">
-                <a class="mail" href="mailto:vishnugoby0010@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i><h2>Gmail</h2></a>
-                <a class="insta" href="https://www.instagram.com/__vishnu__10/"><i class="fab fa-instagram"></i><h2>Instagram</h2></a>
-                <a class="twitter" href="https://twitter.com/_Vishnu_10"><i class="fab fa-twitter"></i><h2>Twiter</h2></a>
-                <a class="snap" href="https://www.snapchat.com/add/vishnugoby0010"><i class="fab fa-snapchat"></i><h2>Snapchat</h2></a>
-                <a class="youtube" href="https://www.youtube.com/channel/UCaTZb02oDb91MMpP9mIY3Qw"><i class="fab fa-youtube"></i><h2>Youtube</h2></a>
-                <a class="git" href="https://github.com/vishnugopy"><i class="fab fa-github"></i><h2>Github</h2></a>
+        <section class="bloc">
+            <h2 class="subheading"><i class="far fa-share-square"></i>  You Can Find Us On</h2>
+            <div class="social">
+                <a class="mail" href="mailto:vishnugoby0010@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+                <a class="insta" href="https://www.instagram.com/__vishnu__10/"><i class="fab fa-instagram"></i></a>
+                <a class="twitter" href="https://twitter.com/_Vishnu_10"><i class="fab fa-twitter"></i></a>
+                <a class="snap" href="https://www.snapchat.com/add/vishnugoby0010"><i class="fab fa-snapchat"></i></a>
+                <a class="youtube" href="https://www.youtube.com/channel/UCaTZb02oDb91MMpP9mIY3Qw"><i class="fab fa-youtube"></i></a>
+                <a class="git" href="https://github.com/vishnugopy"><i class="fab fa-github"></i></a>
             </div>
         </section>
 
-
-        <footer>
-            <center><img class="logo" src="img/logopng.png" alt="image" style="width:20%;height:auto;"></center>
-            <a class="copyrights" href="https://www.instagram.com/__vishnu__10/">&copy;Vishnugopy2019🖖🏼</a>
-        </footer>
-    </body>
+</body>
+ <footer>
+        <a  href="https://www.instagram.com/veterans_in/"><h3>&copy;Veterans's_in_2020🖖</h3></a>
+        
+</footer>
 </html>
