--- a/About.html
+++ b/About.html
@@ -13,7 +13,10 @@
     <a href="About.html"><i class="far fa-user-circle"></i></a>
     </header>
     <body>
-        
+     
+        <section class="namesection">
+<h1>About</h1>
+</section>
 
 
 
