--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                     </div>
                     <div class="detailes">
                         <h3 class="line">GOSTA Font</h3>
+                        <h4>Only Capital Letters Will Support Keep In Mind</h4>
                         <a  href="file/gosta.zip" download="GOSTA Font BY VETERAN'S"><h3 class="btn">Download</h3></a>
                     </div>
                 </div>
@@ -38,7 +39,7 @@
                     <div class="detailes">
                         <h3 class="line">KABAVI Font</h3>
                         <h4>Only Capital Letters Will Support Keep In Mind</h4>
-                        <a  href="file/KABAVI%20FONT.zip" download="KABAVI FONT BY VETERAN'S"><h3 class="btn">Download</h3></a>
+                        <a  href="file/KABAVI%20FONT.zip" download="KABAVI FONT BY Veterans Studio2020"><h3 class="btn">Download</h3></a>
                     </div>
                 </div>
                 <div class="sale">
@@ -48,7 +49,7 @@
                     <div class="detailes">
                         <h3 class="line">SuperStar</h3>
                         <h4>Only Capital Letters Will Support Keep In Mind</h4>
-                        <a  href="file/superstar-font.zip" download="SUPERSTAR BY VETERAN'S"><h3 class="btn">Download</h3></a>
+                        <a  href="file/superstar-font.zip" download="SUPERSTAR BY Veterans Studio2020"><h3 class="btn">Download</h3></a>
                     </div>
                 </div>
 
@@ -87,7 +88,8 @@
                         <img class="log" src="img/newyear.png" alt="vishnu's"/>
                     </div>
                     <div class="detailes">
-                        <h3 class="line">Newyear Wish</h3><br>
+                        <h3 class="line">Newyear Wish</h3>
+                        <h4>Share this web to wish your friends</h4>
                         <a  href="web/ny.html"><h3 class="btn">Go To Site</h3></a>
                     </div>
                 </div>
@@ -97,7 +99,8 @@
                         <img class="log" src="img/xmas.png" alt="vishnu's"/>
                     </div>
                     <div class="detailes">
-                        <h3 class="line">Chirismas Wish</h3><br>
+                        <h3 class="line">Chirismas Wish</h3>
+                        <h4>Share this web to wish your friends</h4>
                         <a  href="web/x-mas.html"><h3 class="btn">Go To Site</h3></a>
                     </div>
                 </div>
@@ -107,7 +110,8 @@
                         <img class="log" src="img/tamilnewyear.png" alt="vishnu's"/>
                     </div>
                     <div class="detailes">
-                        <h3 class="line">Tamil Newyear Wish</h3><br>
+                        <h3 class="line">Tamil Newyear Wish</h3>
+                        <h4>Share this web to wish your friends</h4>
                         <a  href="web/tamil.html"><h3 class="btn">Go To Site</h3></a>
                     </div>
                 </div>
@@ -117,7 +121,8 @@
                         <img class="log" src="img/lovecalculator.png" alt="vishnu's"/>
                     </div>
                     <div class="detailes">
-                        <h3 class="line">Love Calculater</h3><br>
+                        <h3 class="line">Love Calculater</h3>
+                        <h4>Test your love and lose your trust</h4>
                         <a  href="https://vishnugopy.github.io/LOVE/"><h3 class="btn">Go To Site</h3></a>
                     </div>
                 </div>   
@@ -133,7 +138,7 @@
                     <div class="detailes">
                         <h3 class="line">Beard brush</h3>
                         <h4>Play with brush setting to get realistic hair look</h4>
-                        <a  href="file/Facial%20Hair%20For%20Beard.zip" download="Facial hair Veteran'S"><h3 class="btn">Download</h3></a>
+                        <a  href="file/Facial%20Hair%20For%20Beard.zip" download="Facial hair Veterans Studio2020"><h3 class="btn">Download</h3></a>
                     </div>
                 </div>
                  <div class="sale">
@@ -143,7 +148,7 @@
                     <div class="detailes">
                         <h3 class="line">Fogy brush</h3>
                         <h4>Play with brush setting to get realistic Cloud Look</h4>
-                        <a  href="file/Fogy%20Brush%20Veteran'S.rar" download="Fogy brush Veteran'S"><h3 class="btn">Download</h3></a>
+                        <a  href="file/Fogy%20Brush%20Veteran'S.zip" download="Fogy brush Veterans Studio2020"><h3 class="btn">Download</h3></a>
                     </div>
                 </div>
             </section>
@@ -155,7 +160,7 @@
     </body>
 
     <footer>
-        <a  href="https://www.instagram.com/veterans_in/"><h3>&copy;Veterans's_in_2020🖖</h3></a>
+        <a  href="https://www.instagram.com/veterans_in/"><h3>&copy;Veterans Studio2020🖖</h3></a>
         
 </footer>
 </html>
