--- a/About.html
+++ b/About.html
@@ -1,41 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>About</title>
-        <link href="style.css" rel="stylesheet">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" href="img\logopng2.png">
-        <link href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" rel="stylesheet">
-    </head>
-    <header class="main-bar">
+
+<head>
+    <title>About</title>
+    <link href="style.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="img\logopng2.png">
+    <link href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" rel="stylesheet">
+</head>
+<header class="main-bar">
     <a href="index.html"><i class="fas fa-store-alt"></i></a>
     <a href="services.html"><i class="fas fa-icons"></i></a>
     <a href="About.html"><i class="far fa-user-circle"></i></a>
-    </header>
-    <body>
-     
-        <section class="namesection">
-<h1>About</h1>
-</section>
+</header>
+
+<body>
+
+    <section class="namesection">
+        <h1>About</h1>
+    </section>
 
 
 
 
-        <section class="bloc">
-            <h2 class="subheading"><i class="far fa-share-square"></i>  You Can Find Us On</h2>
-            <div class="social">
-                <a class="mail" href="mailto:vishnugoby0010@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a>
-                <a class="insta" href="https://www.instagram.com/__vishnu__10/"><i class="fab fa-instagram"></i></a>
-                <a class="twitter" href="https://twitter.com/_Vishnu_10"><i class="fab fa-twitter"></i></a>
-                <a class="snap" href="https://www.snapchat.com/add/vishnugoby0010"><i class="fab fa-snapchat"></i></a>
-                <a class="youtube" href="https://www.youtube.com/channel/UCaTZb02oDb91MMpP9mIY3Qw"><i class="fab fa-youtube"></i></a>
-                <a class="git" href="https://github.com/vishnugopy"><i class="fab fa-github"></i></a>
-            </div>
-        </section>
+    <section class="bloc">
+        <h2 class="subheading"><i class="far fa-share-square"></i> You Can Find Us On</h2>
+        <div class="social">
+            <a class="mail" href="mailto:vishnugoby0010@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+            <a class="insta" href="https://www.instagram.com/__vishnu__10/"><i class="fab fa-instagram"></i></a>
+            <a class="twitter" href="https://twitter.com/_Vishnu_10"><i class="fab fa-twitter"></i></a>
+            <a class="snap" href="https://www.snapchat.com/add/vishnugoby0010"><i class="fab fa-snapchat"></i></a>
+            <a class="youtube" href="https://www.youtube.com/channel/UCaTZb02oDb91MMpP9mIY3Qw"><i class="fab fa-youtube"></i></a>
+            <a class="git" href="https://github.com/vishnugopy"><i class="fab fa-github"></i></a>
+        </div>
+    </section>
 
 </body>
- <footer>
-        <a  href="https://www.instagram.com/veterans_in/"><h3>&copy;Veterans's_in_2020🖖</h3></a>
-        
+<footer>
+    <a href="https://www.instagram.com/veterans_in/">
+        <h3>&copy;Veterans's_in_2020🖖</h3>
+    </a>
+
 </footer>
+
 </html>
