--- a/About.html
+++ b/About.html
@@ -22,6 +22,17 @@
 
 
 
+    <section class="bloc">
+        <h2 class="subheading"><i class="far fa-user-circle"></i> About us</h2>
+        <h4>Hello , welcome to my site.
+            I'm working alone to make this website possible to everyone. I'm working to publish with a domain '' I'm searching For It". Everything on this site made by me . Also the website it handcoded with HTML,CSS and Js Anyways thank you for your support. If you can donate me to get a domaine.Thank you.</h4>
+        <a href="https://paypal.me/VIshnugopy">
+            <center>
+                <h3 class="btn"><i class="fab fa-paypal"></i> Donate</h3>
+            </center>
+        </a>
+
+    </section>
 
     <section class="bloc">
         <h2 class="subheading"><i class="far fa-share-square"></i> You Can Find Us On</h2>
