--- a/services.html
+++ b/services.html
@@ -44,7 +44,7 @@
     <section class="bloc">
         <h2 class="subheading"><i class="fas fa-truck"></i> S and Sons Transport</h2>
         <div class="ad-service">
-            <img class="img-service" src="img/sandsonstransport.jpeg" alt="dj">
+            <img class="img-service" src="img/sandsonstransport.jpeg" alt="sandsons transport">
             <div class="text-service">
                 <h3>Transport Company based on france</h3>
                 <h4>Only Camions are Availble</h4>
@@ -54,6 +54,24 @@
                 <a href="tel:0033767460955">
                     <h3 class="btn"><i class="fas fa-phone-square-alt"></i> To call</h3>
                 </a>
+            </div>
+        </div>
+    </section>
+
+    <section class="bloc">
+        <h2 class="subheading"><i class="fas fa-laptop-code"></i> Veteran Studio</h2>
+        <div class="ad-service">
+            <img class="img-service" src="img/veteran.jpg" alt="veteran">
+            <div class="text-service">
+                <h3>Independant Freelancer</h3>
+                <h4>To Edit , Designe , After Effect Animations</h4>
+                <a href="mailto:vishnugoby0010@gmail.com">
+                    <h3 class="btn"><i class="fa fa-envelope" aria-hidden="true"></i> Mail</h3>
+                </a>
+                <a href="https://www.instagram.com/__vishnu__10/">
+                    <h3 class="btn"><i class="fab fa-instagram"></i> Instagram</h3>
+                </a>
+
             </div>
         </div>
     </section>
