--- a/About.html
+++ b/About.html
@@ -23,12 +23,12 @@
 
 
     <section class="bloc">
-        <h2 class="subheading"><i class="far fa-user-circle"></i> About us</h2>
-        <h4>Hello , welcome to my site.
+        <h2 class="subheading"><i class="far fa-laugh-beam"></i> About us</h2>
+        <h4 style="padding:2%;">Hello , welcome to my site.
             I'm working alone to make this website possible to everyone. I'm working to publish with a domain '' I'm searching For It". Everything on this site made by me . Also the website it handcoded with HTML,CSS and Js Anyways thank you for your support. If you can donate me to get a domaine.Thank you.</h4>
         <a href="https://paypal.me/VIshnugopy">
             <center>
-                <h3 class="btn"><i class="fab fa-paypal"></i> Donate</h3>
+                <h3 class="btn" style="width:90%;"><i class="fab fa-paypal"></i> Donate</h3>
             </center>
         </a>
 
@@ -52,6 +52,4 @@
         <h3>&copy;Veterans's_in_2020🖖</h3>
     </a>
 
-</footer>
-
-</html>
+</footer></html>
