--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Veteran Studio</title>
+    <title>Stupid Version Studio</title>
     <link href="style.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="img\logopng2.png">
@@ -17,7 +17,7 @@
 <body>
 
     <section class="namesection">
-        <h1>Veteran Studio</h1>
+        <h1>Stupid Version Studio</h1>
     </section>
 
 
@@ -184,8 +184,8 @@
 </body>
 
 <footer>
-    <a href="https://www.instagram.com/veterans_in/">
-        <h3>&copy;Veterans Studio2020🖖</h3>
+    <a href="https://www.instagram.com/stupid_version_studio/">
+        <h3>&copy;Stupid Version Studio</h3>
     </a>
 
 </footer>
