--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <h3 class="line">UpDown</h3>
                     <h4>Put your phone on the floor facing upside and while doing push ups try to touch the screen with your nose.</h4>
                     <a href="https://play.google.com/store/apps/details?id=vishnugopy.github.io.updown&hl=en">
-                        <h3 class="btn">Install</h3>
+                        <h3 class="btn">INSTALL</h3>
                     </a>
                 </div>
             </div>
