--- a/index.html
+++ b/index.html
@@ -21,6 +21,65 @@
     </section>
 
 
+
+        <section class="bloc">
+            <h2 class="subheading"><i class="fas fa-shapes"></i> Apps on Playstore</h2>
+            
+            <div class="sale">
+                <div class="pot">
+                    <img class="log" src="img/durruk.png">
+                </div>
+                <div class="detailes">
+                    <h3 class="line">Durruk</h3>
+                    <h4>A game developed with buildbox by us and it's a casual game</h4>
+                    <a href="https://play.google.com/store/apps/details?id=com.stupidversion.durruk">
+                        <h3 class="btn">INSTALL</h3>
+                    </a>
+                </div>
+            </div>
+
+            <div class="sale">
+                <div class="pot">
+                    <img class="log" src="img/jumpie.png">
+                </div>
+                <div class="detailes">
+                    <h3 class="line">Jumpie</h3>
+                    <h4>A game developed with buildbox by us and it's a casual game</h4>
+                    <a href="https://play.google.com/store/apps/details?id=com.stupidversion.jumpie2">
+                        <h3 class="btn">INSTALL</h3>
+                    </a>
+                </div>
+            </div>
+
+            <div class="sale">
+                <div class="pot">
+                    <img class="log" src="img/vista.jpg">
+                </div>
+                <div class="detailes">
+                    <h3 class="line">VISTA</h3>
+                    <h4>This app will help you to Find more friends with Tamil community</h4>
+                    <a href="https://play.google.com/store/apps/details?id=vishnugopy.github.io.vista">
+                        <h3 class="btn">INSTALL</h3>
+                    </a>
+                </div>
+            </div>
+
+            <div class="sale">
+                <div class="pot">
+                    <img class="log" src="img/updown.jpg">
+                </div>
+                <div class="detailes">
+                    <h3 class="line">UpDown</h3>
+                    <h4>Put your phone on the floor facing upside and while doing push ups try to touch the screen with your nose.</h4>
+                    <a href="https://play.google.com/store/apps/details?id=vishnugopy.github.io.updown&hl=en">
+                        <h3 class="btn">INSTALL</h3>
+                    </a>
+                </div>
+            </div>
+
+        </section>
+
+        
     <section class="products">
         <section class="bloc">
             <h2 class="subheading"><i class="fas fa-scroll"></i> Fonts</h2>
@@ -57,35 +116,6 @@
                     <h4>Only Capital Letters Will Support Keep In Mind</h4>
                     <a href="file/superstar-font.zip" download="SUPERSTAR BY Veterans Studio2020">
                         <h3 class="btn">Download</h3>
-                    </a>
-                </div>
-            </div>
-
-        </section>
-
-        <section class="bloc">
-            <h2 class="subheading"><i class="fas fa-shapes"></i> Apps on Playstore</h2>
-            <div class="sale">
-                <div class="pot">
-                    <img class="log" src="img/vista.jpg">
-                </div>
-                <div class="detailes">
-                    <h3 class="line">VISTA</h3>
-                    <h4>This app will help you to Find more friends with Tamil community</h4>
-                    <a href="https://play.google.com/store/apps/details?id=vishnugopy.github.io.vista">
-                        <h3 class="btn">INSTALL</h3>
-                    </a>
-                </div>
-            </div>
-            <div class="sale">
-                <div class="pot">
-                    <img class="log" src="img/updown.jpg">
-                </div>
-                <div class="detailes">
-                    <h3 class="line">UpDown</h3>
-                    <h4>Put your phone on the floor facing upside and while doing push ups try to touch the screen with your nose.</h4>
-                    <a href="https://play.google.com/store/apps/details?id=vishnugopy.github.io.updown&hl=en">
-                        <h3 class="btn">INSTALL</h3>
                     </a>
                 </div>
             </div>
