--- a/About.html
+++ b/About.html
@@ -24,32 +24,33 @@
 
     <section class="bloc">
         <h2 class="subheading"><i class="far fa-laugh-beam"></i> About us</h2>
-        <h4 style="padding:2%;">Hello , welcome to my site.
-            I'm working alone to make this website possible to everyone. I'm working to publish with a domain '' I'm searching For It". Everything on this site made by me . Also the website it handcoded with HTML,CSS and Js Anyways thank you for your support. If you can donate me to get a domaine.Thank you.</h4>
-        <a href="https://paypal.me/VIshnugopy">
+        <h4 style="padding:2%;">Hello , welcome to our site.
+            we are working alone to make this website possible to everyone. I'm working to publish with a domain and I'm searching For It. Everything on this site made by us feel free to use.
+             Also the website it handcoded. Anyways thank you for your support. If you can donate me to get a domaine go a head.Thank you.</h4>
+
+             <a href="https://paypal.me/VIshnugopy">
             <center>
-                <h3 class="btn" style="width:90%;"><i class="fab fa-paypal"></i> Donate</h3>
+                <h3 class="btn" style="width:90%;">Donate via paypal</h3>
             </center>
-        </a>
+           </a>
 
     </section>
 
     <section class="bloc">
         <h2 class="subheading"><i class="far fa-share-square"></i> You Can Find Us On</h2>
         <div class="social">
-            <a class="mail" href="mailto:vishnugoby0010@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a>
-            <a class="insta" href="https://www.instagram.com/__vishnu__10/"><i class="fab fa-instagram"></i></a>
-            <a class="twitter" href="https://twitter.com/_Vishnu_10"><i class="fab fa-twitter"></i></a>
-            <a class="snap" href="https://www.snapchat.com/add/vishnugoby0010"><i class="fab fa-snapchat"></i></a>
-            <a class="youtube" href="https://www.youtube.com/channel/UCaTZb02oDb91MMpP9mIY3Qw"><i class="fab fa-youtube"></i></a>
-            <a class="git" href="https://github.com/vishnugopy"><i class="fab fa-github"></i></a>
+            <a class="mail" href="mailto:stupidversion@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+            <a class="play" href="https://play.google.com/store/apps/dev?id=7891379765966516089"><i class="fab fa-google-play"></i></a>
+            <a class="insta" href="https://www.instagram.com/stupid_version_studio/"><i class="fab fa-instagram"></i></a>
+            <a class="twitter" href="https://twitter.com/VersionStupid"><i class="fab fa-twitter"></i></a>
         </div>
     </section>
 
 </body>
 <footer>
-    <a href="https://www.instagram.com/veterans_in/">
-        <h3>&copy;Veterans's_in_2020🖖</h3>
+    <a href="https://www.instagram.com/stupid_version_studio/">
+        <h3>&copy;Stupid Version Studio</h3>
     </a>
 
-</footer></html>
+</footer>
+</html>
