--- a/services.html
+++ b/services.html
@@ -57,27 +57,13 @@
         </div>
     </section>
 
-    <section class="bloc">
-        <h2 class="subheading"><i class="fas fa-laptop-code"></i> Veteran Studio</h2>
-        <div class="ad-service">
-            <img class="img-service" src="img/veteran.jpg" alt="veteran">
-            <div class="text-service">
-                <h3>Independant Freelancer</h3>
-                <h4>To Edit , Designe , After Effect Animations</h4>
-                <a href="mailto:vishnugoby0010@gmail.com">
-                    <h3 class="btn"><i class="fa fa-envelope" aria-hidden="true"></i> Mail</h3>
-                </a>
-                <a href="https://www.instagram.com/__vishnu__10/">
-                    <h3 class="btn"><i class="fab fa-instagram"></i> Instagram</h3>
-                </a>
-
-            </div>
-        </div>
-    </section>
 </body>
 <footer>
-    <a href="https://www.instagram.com/veterans_in/">
-        <h3>&copy;Veterans's_in_2020🖖</h3>
+    <a href="https://www.instagram.com/stupid_version_studio/">
+        <h3>&copy;Stupid Version Studio</h3>
     </a>
+
+</footer>
+
 
 </footer></html>
