--- a/About.html
+++ b/About.html
@@ -5,7 +5,7 @@
     <title>About</title>
     <link href="style.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="img\logopng2.png">
+    <link rel="icon" href="img/SVS LOGO OFFICIAL.png">
     <link href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" rel="stylesheet">
 </head>
 <header class="main-bar">
