--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <body>
 
     <section class="namesection">
+        <img class="logo" src="img/SVS LOGO OFFICIAL.png" alt="LOGO" >
         <h1>Stupid Version Studio</h1>
     </section>
 
