--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" rel="stylesheet">
 </head>
 <header class="main-bar">
-    <a href="index.html"><i class="fas fa-store-alt"></i></a>
+    <a href="index.html"><i class="fas fa-home"></i></a>
     <a href="services.html"><i class="fas fa-icons"></i></a>
     <a href="About.html"><i class="far fa-user-circle"></i></a>
 </header>
