--- a/services.html
+++ b/services.html
@@ -11,7 +11,7 @@
 
 <body>
     <header class="main-bar">
-        <a href="index.html"><i class="fas fa-store-alt"></i></a>
+        <a href="index.html"><i class="fas fa-home"></i></a>
         <a href="services.html"><i class="fas fa-icons"></i></a>
         <a href="About.html"><i class="far fa-user-circle"></i></a>
     </header>
