--- a/services.html
+++ b/services.html
@@ -2,11 +2,15 @@
 <html lang="en">
 
 <head>
-    <title>Partners</title>
+    <title>Our Services</title>
     <link href="style.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="img/SVS LOGO OFFICIAL.png">
     <link href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" rel="stylesheet">
+    <meta 
+     name='viewport' 
+     content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' 
+/>
 </head>
 
 <body>
