--- a/web/ny.html
+++ b/web/ny.html
@@ -16,7 +16,7 @@
 
 <div class="layer">
       <h3>Hi! I Wish you </h3>
-      <h2>Happy New year 2019</h2>
+      <h2>Happy New Year 2020</h2>
       <div class="greeting"><h1></h1></div>
       <img class="cen" src="../img/nw2019.png" alt="new year 2019">
 
@@ -97,9 +97,9 @@ background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
 
 
 .layer{
-  margin:10% auto;
+  margin:2% auto;
   width: 60%;
-  margin: auto;
+  
 }
 
 
