--- a/web/x-mas.html
+++ b/web/x-mas.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <title> Wishes From Vishnugopy</title>
-    <link rel="stylesheet" href="CSS\stylesheet.css">
+    <meta 
+    name='viewport' 
+    content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' 
+/>
+    <title> Wishes From Your Friend</title>
+    <link rel="shortcut icon" href="../img/SVS LOGO OFFICIAL.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="js/js.js"></script>
-    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Cinzel+Decorative" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Sirin+Stencil" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <link rel="shortcut icon" href="../img/xxx.jpg" />
+    <link href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" rel="stylesheet">
+    
   </head>
   <body>
+
+    <div class="layer">
       <h3>Hi!I Wish you </h3>
       <h2>Merry Christmas</h2>
       <div class="greeting"><h1></h1></div>
@@ -20,22 +22,22 @@
 
 
 
-      <section class="pop-up">
-<div class="box">
-  <form class="form">
-    <h4>Please enter your name here</h4>
-			<div><input type="text" placeholder="Name" required/></div>
-			<div><button class="close" type="submit">Let's Go! <i class="fas arrow-right"></i></button></div>
-		</form>
+  <section class="pop-up">
+    <div class="box">
+      <form class="form">
+        <h3>Please Enter Your Sweet Name Here..</h3>
+          <div><input type="text" placeholder="........" required/></div>
+          <div><button class="close" type="submit">Let's Go! <i class="fas arrow-right"></i></button></div>
+        </form>
+    </div>
+      </section>
+
+
+  <footer>
+    <a href="../index.html">&copy;Stupid Version Studio</a>
+  </footer>
+
 </div>
-  </section>
-
-
-<footer>
-  <a href="../index.html">&copy;Vishnugopy2019</a>
-</footer>
-
-
 <script>
 $(document).ready(function(){
 
@@ -64,106 +66,130 @@ $(document).ready(function(){
 
 
 <style>
+ @import url('https://fonts.googleapis.com/css?family=Quicksand&display=swap');
 
 body{
 text-align: center;
-background:#D3CCE3;
-background: -webkit-linear-gradient(to right, #E9E4F0, #D3CCE3);
-background: linear-gradient(to right, pink, red);
 background-repeat:repeat-y;
+outline: none;
+font-family: 'Quicksand', sans-serif;
+background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+	background-size: 400% 400%;
+	animation: gradient 15s ease infinite;
+}
+
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+
+
+.layer{
+  margin:2% auto;
+  width: 60%;
+  
+}
+
+
+h1{
+font-size:4.5vh;
+color:#00b0fc;
+text-shadow:white 3px 2px 1px;
+}
+h2{
+font-size:6vh;
+color: white;
+margin: 0.5%;
 }
 
 h3{
-font-family: 'Sirin Stencil', cursive;
-font-size:4vh;
+font-size:3vh;
 color: blue;
-text-shadow:
-    3px 3px 0 #ffffff,
-  -1px -1px 0 #ffffff,
-   1px -1px 0 #ffffff,
-   -1px 1px 0 #ffffff,
-    1px 1px 0 #ffffff;
+margin: 0.5%;
+  
 }
 
-h1{
-font-family: 'Cinzel Decorative', cursive;
-font-size:7vh;
-color:#00b0fc;
-text-shadow:
-    3px 3px 0 #000,
-  -1px -1px 0 #ffffff,
-   1px -1px 0 #000,
-   -1px 1px 0 #ffffff,
-    1px 1px 0 #000;
+.box h4{
+    font-size:2vh;
+    padding:1%;
+    margin:0;
 }
-h2{
-font-family: 'Sirin Stencil', cursive;
-font-size:5vh;
-color: white;
-text-shadow:
-    3px 3px 0 #000,
-  -1px -1px 0 #000,
-   1px -1px 0 #000,
-   -1px 1px 0 #000,
-    1px 1px 0 #000;
+
+.pop-up h3{
+  color: #ffffff;
 }
+
 
 a{
 font-size:2vh;
 text-decoration: none;
-font-family: 'Sirin Stencil', cursive;
 color:white;
-text-shadow:
-      3px 3px 0 #000,
-    -1px -1px 0 #000,
-     1px -1px 0 #000,
-     -1px 1px 0 #000,
-      1px 1px 0 #000;
+    
 }
 
 .cen{
   height:auto;
-  width:50%;
+  width:95%;
 }
 
 .pop-up{
-    background:whitesmoke;
+    padding:4%;
+    background:#002864;
     height:auto;
-    width:90%;
-    border:3px blue solid;
-    border-radius:25px;
+    width:60%;
+    border:1px solid white;
+    border-radius:15px;
     position:absolute;
-    top:30%;
+    margin: auto;
+    top:15%;
     left:5%;
     right:5%;
+    outline: none;
 }
-.box h4{
-    font-size:3vh;
-    font-family: 'Sirin Stencil', cursive;
-    padding:1%;
-    margin:0;
-}
+
 input{
+    font-size:3vh;
     text-transform:Capitalize;
     color:black;
-    padding:0 0 0 2%;
+    padding:0 0 0 1%;
     border-radius:25px;
-    border:1px black solid;
+    border:none;
     width:80%;
-    height:50px;
-    margin:2% 0 1% 0;
+    height:auto;
+    margin:1% 0 1% 0;
+    outline-style: none;
+    text-align: center;
+    padding: 0.5%;
+    font-family: 'Quicksand', sans-serif;
 }
 button{
-    font-family: 'Sirin Stencil', cursive;
     font-size:3vh;
     color:white;
-    background-image: linear-gradient(to bottom, #051937, #10325f, #184f8b, #1b6dba, #128deb);
+    background:rgb(0, 174, 255);
     padding:0.5%;
-    margin:1%;
+    margin:3% 1%;
     border-radius:20px;
-    border:2px white solid;
+    border:none;
     width:50%;
 }
+
+@media screen and (max-width: 620px) {
+  .layer{
+    margin: 20% auto;
+    width: 100%;
+    height: auto;  
+  }
+
+  .pop-up{
+    width: 80%;
+  }
 </style>
-</body>
+  </body>
 </html>
