--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
             <div class="sale">
                 <div class="pot">
-                    <img class="log" src="img/newyear.png" alt="vishnu's" />
+                    <img class="log" src="img/NewYear.jpg" alt="vishnu's" />
                 </div>
                 <div class="detailes">
                     <h3 class="line">Newyear Wish</h3>
@@ -145,7 +145,7 @@
 
             <div class="sale">
                 <div class="pot">
-                    <img class="log" src="img/xmas.png" alt="vishnu's" />
+                    <img class="log" src="img/Christmas.jpg" alt="vishnu's" />
                 </div>
                 <div class="detailes">
                     <h3 class="line">Chirismas Wish</h3>
@@ -158,25 +158,12 @@
 
             <div class="sale">
                 <div class="pot">
-                    <img class="log" src="img/tamilnewyear.png" alt="vishnu's" />
+                    <img class="log" src="img/tamilny.jpg" alt="vishnu's" />
                 </div>
                 <div class="detailes">
                     <h3 class="line">Tamil Newyear Wish</h3>
                     <h4>Share this web to wish your friends</h4>
                     <a href="web/tamil.html">
-                        <h3 class="btn">Go To Site</h3>
-                    </a>
-                </div>
-            </div>
-
-            <div class="sale">
-                <div class="pot">
-                    <img class="log" src="img/lovecalculator.png" alt="vishnu's" />
-                </div>
-                <div class="detailes">
-                    <h3 class="line">Love Calculater</h3>
-                    <h4>Test your love and lose your trust</h4>
-                    <a href="https://vishnugopy.github.io/LOVE/">
                         <h3 class="btn">Go To Site</h3>
                     </a>
                 </div>
