--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
      content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' 
 />
 </head>
-<header class="main-bar">
+<div id="mainbar"  class="main-bar">
     <a href="index.html"><i class="fas fa-home"></i></a>
     <a href="services.html"><i class="fas fa-icons"></i></a>
     <a href="About.html"><i class="far fa-user-circle"></i></a>
-</header>
+</div>
 
 <body>
 
-    <section class="namesection">
-        <img class="logo" src="img/SVS LOGO OFFICIAL.png" alt="LOGO" >
-        <h1>Stupid Version Studio</h1>
+    <section id="namesection" class="namesection">
+        <img id="logosvs" class="logo" src="img/SVS LOGO OFFICIAL.png" alt="LOGO" >
+        <h1 id="header" >Stupid Version Studio</h1>
     </section>
 
 
