--- a/web/tamil.html
+++ b/web/tamil.html
@@ -6,7 +6,7 @@
     content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' 
 />
     <title> Wishes From Your Friend</title>
-    <link rel="shortcut icon" href="../img/SVS LOGO OFFICIAL.png" />
+    <link rel="icon" href="img/SVS LOGO OFFICIAL.svg">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" rel="stylesheet">
     
