--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Stupid Version Studio</title>
     <link href="style.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="img/SVS LOGO OFFICIAL.png">
+    <link rel="icon" href="img/SVS LOGO OFFICIAL.svg">
     <link href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" rel="stylesheet">
     <meta 
      name='viewport' 
@@ -21,7 +21,7 @@
 <body>
 
     <section id="namesection" class="namesection">
-        <img id="logosvs" class="logo" src="img/SVS LOGO OFFICIAL.png" alt="LOGO" >
+        <img id="logosvs" class="logo" src="img/SVS LOGO OFFICIAL.svg" alt="LOGO" >
         <h1 id="header" >Stupid Version Studio</h1>
     </section>
 
