--- a/services.html
+++ b/services.html
@@ -5,7 +5,7 @@
     <title>Our Services</title>
     <link href="style.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="img/SVS LOGO OFFICIAL.png">
+    <link rel="icon" href="img/SVS LOGO OFFICIAL.svg">
     <link href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" rel="stylesheet">
     <meta 
      name='viewport' 
