--- a/About.html
+++ b/About.html
@@ -50,6 +50,10 @@
         </div>
     </section>
 
+
+    <iframe width="100%" height="500" src="https://www.youtube.com/embed/p4_AmyndTcA" frameborder="none" 
+    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 </body>
 <footer>
     <a href="https://www.instagram.com/stupid_version_studio/">
