--- a/index.html
+++ b/index.html
@@ -20,11 +20,7 @@
 
 <body>
 
-    <section id="namesection" class="namesection">
-        <img id="logosvs" class="logo" src="img/SVS LOGO OFFICIAL.svg" alt="LOGO" >
-        <h1 id="header" >Stupid Version Studio</h1>
-    </section>
-
+<section class="bloc"><center><img id="logosvs" class="logo" src="img/SVS LOGO OFFICIAL.svg" alt="LOGO" ></center></section>
 
 
         <section class="bloc">
