--- a/About.html
+++ b/About.html
@@ -20,17 +20,19 @@
 
 <body>
 
-    <section class="namesection">
-        <h1>About</h1>
+    <section id="namesection" class="namesection">
+        <img id="logosvs" class="logo" src="img/SVS LOGO OFFICIAL.svg" alt="LOGO" >
+        <h1 id="header" >Stupid Version Studio</h1>
     </section>
+
 
 
 
     <section class="bloc">
         <h2 class="subheading"><i class="far fa-laugh-beam"></i> About us</h2>
         <h4 style="padding:2%;">Hello , welcome to our site.
-            we are working alone to make this website possible to everyone. I'm working to publish with a domain and I'm searching For It. Everything on this site made by us feel free to use.
-             Also the website it handcoded. Anyways thank you for your support. If you can donate me to get a domaine go a head.Thank you.</h4>
+            we are working alone to make this website possible to everyone. we are also working to publish with a domain and I'm searching For It. 
+            Everything on this site made by us feel free to use.Anyways thank you for your support. If you can donate me to get a domaine go a head.Thank you.</h4>
 
              <a href="https://paypal.me/VIshnugopy">
             <center>
