--- a/index.html
+++ b/index.html
@@ -80,6 +80,31 @@
 
         </section>
 
+        <section class="bloc">
+            <h2 class="subheading"><i class="fab fa-instagram"></i>Instagram Filters</h2>
+            
+            <div class="sale">
+                <div class="pot">
+                    <img class="log" src="img/bighead.png">
+                </div>
+                <div class="detailes">
+                    <h3 class="line">Big Head</h3>
+                    <h4>Filter by Us</h4>
+                    <a href="https://www.instagram.com/a/r/?effect_id=2431084013883394">
+                        <h3 class="btn">Try It</h3>
+                    </a>
+                </div>
+            </div>
+
+
+
+        </section>
+
+
+
+
+
+
         
     <section class="products">
         <section class="bloc">
