--- a/About.html
+++ b/About.html
@@ -53,8 +53,20 @@
     </section>
 
 
-    <iframe width="100%" height="500" src="https://www.youtube.com/embed/p4_AmyndTcA" frameborder="none" 
-    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <video controls width="90%">
+
+
+        <source src="https://www.youtube.com/embed/p4_AmyndTcA"
+                type="video/link">
+
+        <source src="VIDEO/STUPID.mp4"
+                type="video/mp4">
+
+       
+    
+        Sorry, your browser doesn't support embedded videos.
+    </video>
+
 
 </body>
 <footer>
