--- a/About.html
+++ b/About.html
@@ -53,7 +53,7 @@
     </section>
 
 
-    <video controls width="90%">
+    <video controls >
 
 
         <source src="https://www.youtube.com/embed/p4_AmyndTcA"
